Fix text overflow bugs that contents go out of the boundary of div Change README.md

--- a/danmu/danmu.css
+++ b/danmu/danmu.css
@@ -1,6 +1,7 @@
 .header {
     font-size: 50px;
     padding: 10px;
+    text-align:center;
 }
 
 .header:hover{
@@ -14,6 +15,7 @@
     border-radius: 10px;
     z-index: -1;
 }
+
 
 .input{
     margin-top : 10px;
